# test-remote-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  render.yaml  webapp.py
web/: app.js  index.html  styles.css
