[project]
name = "build-local-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "aiosqlite>=0.20.0",
    "google-auth>=2.40.3",
    "python-dotenv>=1.1.1",
    "starlette>=0.46.2",
    "twilio>=9.8.3",
]
